
- With LessTif, the source window no longer scrolls around when
  setting or deleting breakpoints.

- With LessTif, combo boxes (drop-down text boxes) no longer shrink.

- With LessTif, Text selection works better.

- With LessTif, typing in the debugger console works better.

- With LessTif, switching the register set works.

- Drag and Drop of breakpoints in the machine code is supported.

- Spin boxes (used to step values) have been slightly improved.

- Forwarding of keyboard events from the source window into the
  debugger console is now optional.  See the `consoleHasFocus' resource. (10)


Printing
--------

- PostScript printing includes background colors (e.g. changed values)



Installation
------------

- PLEASE NOTE: Several installation details have changed.  Be sure to
  read the `INSTALL' file for new installation instructions.

- Several DDD resources (such as the application defaults) now reside
  in separate files, reducing DDD executable size and memory footprint 
  by about 300k.

- To run DDD from the build directory (i.e. before installing), you
  must set the DDD_HOME and XUSERFILESEARCH environment variables.
  See the `INSTALL' file for details.

- The configure `--enable-rpath' option allows you to specify a path
  to be searched for dynamic libraries at run-time.

- DDD Makefiles are now GNU standards-compliant and generated by automake.

- DDD Makefiles use libtool for generic shared library support.

- A bad dependency on $(SHELL) in the Makefile has been fixed.  This
  caused unnecessary calls of flex and bison in the distribution. (9)

- A bad wildcard use in the Makefile has been fixed. (3)

- A compilation problem in `PannedGE.C' with some GCC variants has been fixed.

- DDD now compiles cleanly even with `gcc -Wwrite-strings'.  This
  avoids several warnings/errors on C++ compilers other than GCC. (1)

- The `--configuration' option now gives more information about the
  compiler being used to compile DDD. (1)
